--- a/cipher-console/src/main/resources/application-docker.properties
+++ b/cipher-console/src/main/resources/application-docker.properties
@@ -48,6 +48,10 @@ mybatis.type-aliases-package=cipher.console.cipher_console_oidc.domain.*
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 #mybatis驼峰命名规则开启
 mybatis.configuration.map-underscore-to-camel-case=true
+#这是默认的执行类型  （SIMPLE: 简单； REUSE: 执行器可能重复使用prepared statements语句；BATCH: 执行器可以重复执行语句和批量更新）
+mybatis.configuration.default-executor-type=SIMPLE
+
+mybatis.configuration.use-generated-keys=true
 
 
 ## Freemarker 配置
